@@ -1,5 +1,6 @@
 systemd-genie (2.2) buster bullseye bookworm sid focal bionic; urgency=medium
 
+        * Single-file package python scripts.
         * Man page fixes.
 
  -- Alistair Young <avatar@arkane-systems.net>  Mon, 28 Feb 2022 18:30:00 -0500
